using jakefile, add tests structure

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "node >=0.1.90"
     ],
     "dependencies":{
-      "underscore":"*"
+      "underscore":"*",
+      "jake":"*"
     },
     "devDependencies":{
+        "jake":"*",
         "vows":"*"
     },
     "main": "index"
