add tests for Faker::Name

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     },
     "devDependencies":{
         "jake":"*",
+        "mockery":"*",
+        "mocha":"*"
     },
-    "main": "index"
+    "main": "index",
+    "scripts": {"test": "./node_modules/mocha/bin/mocha ./test/**/*-test.js"}
 }
